change alphabet to uppercase.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- TODO: add menu bar for this portfolio page -->
     <div class="container-fluid">
       <header class="logo">
-        <img class="logo-image" src="image/mylogo0.png" alt="logo">
+        <img class="logo-image" src="image/mylogo0.PNG" alt="logo">
       </header>
       <div class="row">
-        <img class="img-responsive" src="image/main_image_1.jpg" alt="main image">
+        <img class="img-responsive" src="image/main_image_1.JPG" alt="main image">
         <div class="title-text col-md-12 text-center text-uppercase">
           <h1 class="page-title">Portfolio Site</h1>
           <h3 class="page-sub-title">Full Stack Web Developer</h3>
@@ -31,17 +31,17 @@
       </div>
       <div class="row text-center">
         <div class="col-md-4">
-          <img class="img-responsive" src="image/project1_thumbnail.png" data-toggle="modal" data-target="#project1" alt="project1">
+          <img class="img-responsive" src="image/project1_thumbnail.PNG" data-toggle="modal" data-target="#project1" alt="project1">
           <h3>Movie Trailer Website</h3>
           <p><a target="_blank" href="https://github.com/DongleLeaf/movie-trailer-website">Link to project</a></p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive" src="image/project2_thumbnail.png" data-toggle="modal" data-target="#project2" alt="project2">
+          <img class="img-responsive" src="image/project2_thumbnail.PNG" data-toggle="modal" data-target="#project2" alt="project2">
           <h3>PINK 2048</h3>
           <p><a target="_blank" href="https://github.com/DongleLeaf/2048">Link to project</a></p>
         </div>
         <div class="col-md-4">
-          <img class="img-responsive" src="image/project3_thumbnail.png" data-toggle="modal" data-target="#project3" alt="project3">
+          <img class="img-responsive" src="image/project3_thumbnail.PNG" data-toggle="modal" data-target="#project3" alt="project3">
           <h3>My GitHub</h3>
           <p><a target="_blank" href="https://github.com/DongleLeaf">Link to my profile</a></p>
         </div>
