--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- TODO: add menu bar for this portfolio page -->
     <div class="container-fluid">
       <header class="logo">
-        <img class="logo-image" src="image/mylogo0.PNG" alt="logo">
+        <img class="logo-image" src="image/mylogo0.png" alt="logo">
       </header>
       <div class="row">
         <img class="img-responsive" src="image/main_image_1.JPG" alt="main image">
