follow the style guide

--- a/index.html
+++ b/index.html
@@ -6,20 +6,28 @@
     <title>Full Stack Web Developer Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Barcode+39+Text" rel="stylesheet">
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js" async defer></script>
+    <script src="js/bootstrap.min.js" async defer></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <!-- TODO: add menu bar for this portfolio page -->
     <div class="container-fluid">
-      <header class="logo">
-        <img class="logo-image" src="image/mylogo0.png" alt="logo">
-      </header>
       <div class="row">
-        <img class="img-responsive" src="image/main_image_1.JPG" alt="main image">
-        <div class="title-text col-md-12 text-center text-uppercase">
+        <div class="col-md-12">
+          <header class="logo">
+            <img class="logo-image" src="image/mylogo0.png" alt="logo">
+          </header>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <img class="img-responsive" src="image/main_image_1.JPG" alt="main image">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 title-text text-center text-uppercase">
           <h1 class="page-title">Portfolio Site</h1>
           <h3 class="page-sub-title">Full Stack Web Developer</h3>
         </div>
